# support-project-radar

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  custom-date-range-slack.yml  daily-slack.yml  daily.yml
rules/: rules.yaml  sources.yaml
scripts/: daily.py
src/radar/: __init__.py  config.py  main.py
src/radar/connectors/: knowhow_feed.py  kstartup_api.py  smtech_public.py
src/radar/integrations/: console.py  slack.py
